Add user to swagger definitions
